grammar/grammar.txt

start : block $

block : INDENT statements DEDENT

statments : statement statements
    |

statement : declaration NEWLINE
    | NEWLINE
    | if
    | while
    | function_call NEWLINE
    | function_define NEWLINE
    | RETURN expression
    | class_define

declaration : IDENTIFIER IDENTIFIER ASSIGN expression
    | IDENTIFIER ASSIGN expression
    | CLASS_VAR IDENTIFIER ASSIGN expression
    | INSTANCE_VAR IDENTIFIER ASSIGN expression

if : IF expression COLON NEWLINE block elif
    | IF expression COLON NEWLINE block elif ELSE block 

elif : ELIF expression COLON NEWLINE block elif
    |

while : WHILE expression COLON NEWLINE block 
    
expression : val
    | val binary_op expression
    | unary_op val
    | unary_op val binary_op expression
    | function_call
    | unary_op function_call
    | function_call binary_op expression

array : IDENTIFIER L_BRACKET expression R_BRACKET

function_call : IDENTIFIER L_PAREN R_PAREN
    | IDENTIFIER L_PAREN arg_list R_PAREN

arg_list : expression
    | expression COMMA arg_list

function_define : DEF IDENTIFIER L_PAREN R_PAREN IDENTIFIER COLON NEWLINE block 
    | DEF IDENTIFIER L_PAREN param_list R_PAREN IDENTIFIER COLON NEWLINE block 

param_list : IDENTIFIER IDENTIFIER
    | IDENTIFIER IDENTIFIER COMMA param_list

class_define: CLASS IDENTIFIER COLON NEWLINE class_block

class_block: INDENT class_statements DEDENT

class_statements : class_statement class_statements
    |

class_statement : class_var_declaration NEWLINE
    | NEWLINE
    | STATIC COLON NEWLINE block
    | INSTANCE COLON NEWLINE block

class_var_declaration : INSTANCE_VAR IDENTIFIER IDENTIFIER
    | CLASS_VAR IDENTIFIER IDENTIFIER

binary_op : PLUS
    | MINUS
    | MULTIPLY
    | DIVIDE
    | OR
    | AND
    | EQUAL
    | NOT_EQUAL
    | LESS_THAN
    | LESS_THAN_EQUAL
    | GREATER_THAN
    | GREATER_THAN_EQUAL

unary_op : MINUS
    | NOT

val : INTEGER
    | FLOAT
    | TRUE
    | FALSE
    | STRING
    | IDENTIFIER
    | array
    | CLASS_VAR IDENTIFIER
    | INSTANCE_VAR IDENTIFIER
